<resources>
    <string name="app_name">4crypto</string>
    <string name="text_login_here">LOGIN YOUR ACCOUNT</string>
    <string name="title_email_input_profile">Email</string>
    <string name="email_hint">Input Your Email</string>
    <string name="title_password_input_profile">Password</string>
    <string name="password_hint">Input Your Password</string>
    <string name="text_nav_to_register">Register Here</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_register">Register</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_click_login_here">Login Here</string>
    <string name="text_title_home">Trending Coin</string>
    <string name="text_title_item_home">judul coint</string>
    <string name="text_item_home_coint_deks">Deskripsi item home coin</string>
    <string name="text_item_home_price">$3,397.73</string>
    <string name="text_go_to_web">Open in CoinGecko</string>
    <string name="text_coin_is_empty">Coin is empty</string>
    <string name="text_error_email_empty">Email cannot be empty</string>
    <string name="text_error_email_invalid">Email is invalid</string>
    <string name="text_error_pw_empty">Password cannot be empty</string>
    <string name="text_error_name_empty">Name cannot be empty</string>
    <string name="text_error_pw_lower">Password must have 8 characters or more</string>
    <string name="text_pw_nomatch">Password did not match</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_save">Save</string>
    <string name="text_button_logout">Logout</string>
    <string name="text_dialog_logout">Are you sure want to logout?</string>
    <string name="text_doalog_logout_back">Back</string>
    <string name="text_link_edit_profile_success">Success edit profile data</string>
    <string name="text_link_edit_profile_failed">Failed edit profile data!</string>
    <string name="text_dialog_change_pw">The link to change your password has been sent to your email</string>
    <string name="text_back">Back</string>
    <string name="text_not_registered">Not Registered?</string>
    <string name="text_already_registered">Already Have An Account?</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="title_tab_favorite">Favorite</string>
    <string name="text_greetings">Hi, %1$s</string>
    <string name="text_banner">Stay update with the latest coin prices</string>
    <string name="text_button_banner">Check Now</string>
    <string name="text_btn_banner">See Details Below</string>
    <string name="title_toolbar_favorite">Your List Favorite Coin</string>
    <string name="text_success_add_to_favorite">Success add to favorite</string>
    <string name="text_failed_add_to_favorite">Failed add to favorite</string>
    <string name="text_load_add_to_favorite">Loading...</string>
    <string name="text_error_empty_content">This Content Is Empty</string>
    <string name="text_register_here">REGISTER YOUR ACCOUNT</string>

</resources>